# Tic-Tac-Toe-2.0

./: .gitignore  Cargo.toml  Dockerfile.legacy  LICENSE  README.md  build_legacy.sh  install.sh  velha2.desktop
prompts/: antigravity-prompt.md
src/: app.rs  error.rs  main.rs
src/ai/: heuristic.rs  levels.rs  minimax.rs  mod.rs
src/game/: board.rs  mod.rs  rules.rs  types.rs
src/network/: manager.rs  mod.rs  peer.rs  protocol.rs  session.rs
src/storage/: db.rs  history.rs  mod.rs  profile.rs  settings.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: board_widget.rs  mod.rs  player_card.rs
src/ui/screens/: game_screen.rs  history.rs  lobby.rs  main_menu.rs  mod.rs  profile.rs
