[package]
name = "velha2"
version = "0.1.0"
edition = "2021"
authors = ["HappyCode Productions"]
description = "Ultimate Tic-Tac-Toe — Velha 2.0"

[[bin]]
name = "velha2"
path = "src/main.rs"

[dependencies]
# Framework de app egui para desktop nativo
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
] }
# UI immediate-mode
egui = "0.27"

# SQLite embutido — sem dependência externa em runtime
rusqlite = { version = "0.31", features = ["bundled"] }

# iroh P2P — será integrado em iteração futura (0.18 incompatível com Rust 1.94)
# iroh = "0.29"

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Runtime async necessário para iroh
tokio = { version = "1", features = ["full"] }

# Geração de números aleatórios para o nível Noob da IA
rand = "0.8"

# Diretórios de dados multiplataforma (~/.local, %APPDATA%, ~/Library)
directories = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
